paragon/blocks/_learning.scss
.pgn__data-table-layout-main {
    max-width: 100%;
}

html[dir="rtl"] .upgrade-notification-ul {
    margin-left: 2.5em !important;
    margin-right: 0 !important;
}

html[dir] .course-tabs-navigation .nav {
    .dropdown-menu .dropdown-item {
        border: none;

        &:hover,
        &:focus,
        &:focus:hover,
        &:focus:hover:active {
            border: none;
            color: $primary;
        }

        &:focus:active {
            color: #fff;
        }
    }

    a:focus,
    a:focus:hover {
        color: $primary;
        border: none;
        border-top: 4px solid transparent;
        border-bottom: 4px solid;
    }
}

.course-outline-tab .card .pgn__card-section .pgn__form-switch-input:checked {
    border-color: #454545;
}

.learning-header + div:not([class], [data-testid]),
.learning-header + p.text-center.py-5.mx-auto {
    flex: 1 1 auto;
}

div[data-testid="exam-timer"] {
    line-height: 1.5;

    .alert-link {
        cursor: pointer;
    }

    .d-flex {
        flex-grow: 0;
    }

    .exam-timer-clock {
        justify-content: flex-end !important;
        flex-grow: 0 !important;
    }
}

